test/expected/declare_c16-c++03.out
declare x as char16_t
             ^
14: error: "char16_t": unsupported type until C++11; did you mean "wchar_t"?
